5.0-beta2
 * Fix the correspondingMessagingVersion of SSTable format and improve TTL overflow tests coverage (CASSANDRA-19197)
 * Fix resource cleanup after SAI query timeouts (CASSANDRA-19177)
 * Suppress CVE-2023-6481 (CASSANDRA-19184)
Merged from 4.1:
 * Fix StackOverflowError on ALTER after many previous schema changes (CASSANDRA-19166)
Merged from 4.0:
Merged from 3.11:
Merged from 3.0:


5.0-beta1
 * Fix SAI intersection queries (CASSANDRA-19011)
 * Clone EndpointState before sending GossipShutdown message (CASSANDRA-19115)
 * SAI indexes are marked queryable during truncation (CASSANDRA-19032)
 * Enable Direct-IO feature for CommitLog files using Java native API's. (CASSANDRA-18464)
 * SAI fixes for composite partitions, and static and non-static rows intersections (CASSANDRA-19034)
 * Improve SAI IndexContext handling of indexed and non-indexed columns in queries (CASSANDRA-18166)
 * Fixed bug where UnifiedCompactionTask constructor was calling the wrong base constructor of CompactionTask (CASSANDRA-18757)
 * Fix SAI unindexed contexts not considering CONTAINS KEY (CASSANDRA-19040)
 * Ensure that empty SAI column indexes do not fail on validation after full-SSTable streaming (CASSANDRA-19017)
 * SAI in-memory index should check max term size (CASSANDRA-18926)
 * Set default disk_access_mode to mmap_index_only (CASSANDRA-19021)
 * Exclude net.java.dev.jna:jna dependency from dependencies of org.caffinitas.ohc:ohc-core (CASSANDRA-18992)
 * Add UCS sstable_growth and min_sstable_size options (CASSANDRA-18945)
 * Make cqlsh's min required Python version 3.7+ instead of 3.6+ (CASSANDRA-18960)
 * Fix incorrect seeking through the sstable iterator by IndexState (CASSANDRA-18932)
 * Upgrade Python driver to 3.28.0 (CASSANDRA-18960)
 * Add retries to IR messages (CASSANDRA-18962)
 * Add metrics and logging to repair retries (CASSANDRA-18952)
 * Remove deprecated code in Cassandra 1.x and 2.x (CASSANDRA-18959)