@@ -1,4 +1,5 @@
 5.0-beta2
+ * UCS min_sstable_size should not be lower than target_sstable_size lower bound (CASSANDRA-19112)
  * Fix the correspondingMessagingVersion of SSTable format and improve TTL overflow tests coverage (CASSANDRA-19197)
  * Fix resource cleanup after SAI query timeouts (CASSANDRA-19177)
  * Suppress CVE-2023-6481 (CASSANDRA-19184)
